# ClaudeFairShare

./: README.md  pyproject.toml
claude_fair_share/: __init__.py  cli.py  config.py  installer.py  pricing.py  report.py  scanner.py
tests/: test_tracker.py
