[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-fair-share"
version = "1.0.0"
description = "Local, per-machine token usage tracker for Claude Code."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Dhruv Chauhan", email = "chauhandhruv351@gmail.com" }]
keywords = ["claude", "claude-code", "tokens", "usage", "cost", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []  # stdlib only, by design

[project.scripts]
claude-fair-share = "claude_fair_share.cli:main"

[project.urls]
Homepage = "https://github.com/dhruv2x/ClaudeFairShare"
Issues = "https://github.com/dhruv2x/ClaudeFairShare/issues"

[tool.setuptools]
packages = ["claude_fair_share"]
